--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
 
         	<div class="hh">
         		<div class="hi">
-            		<a class="btn btn " href=AnishiMishra.pdf>Download CV</a>
+            		<a class="btn btn " href="AnishiMishra.pdf">Download CV</a>
             		<a class="btn btn-primary" href="mailto:anishimishra27@gmail.com">Hire Me</a>
             	</div>
             </div>
