--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
 		        						<img src="images/map.png">
 		        					</div>
 		        					<h3>Address</h3>
-		        					<h4>Gopal Thirath Plaza, <br>Indira Nagar, Lucknow.</h4>
+		        					<h4>Indira Nagar, Lucknow.</h4>
 		        				</div>
 		        			</div>
 		        		</div>
