--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
 	                           <a href="https://www.instagram.com/anishi__/"><i class="fab fa-instagram"></i></a>
 	                           <a href="https://www.facebook.com/anishi.mishra.77/"><i class="fab fa-facebook-f"></i></a>
 	                           <a href="https://github.com/anishimishra"><i class="fab fa-github"></i></a>
-	                           <a href="https://leetcode.com/anishi__/"><i class="fa fa-code"></i></a>
+	                           <a href="https://auth.geeksforgeeks.org/user/anishimishra27/profile"><i class="fa fa-code"></i></a>
 	                           <a href="https://twitter.com/anishi__mishra"><i class="fab fa-twitter"></i></a>
 	                           <a href="https://www.linkedin.com/in/anishi-mishra-91a944177/"><i class="fab fa-linkedin-in"></i></a>
 	                        </p>
