--- a/index.html
+++ b/index.html
@@ -164,9 +164,21 @@
                     </div>
                 </div>
                 <div class="skill-item">
-                    <h5>JAVA</h5><span>80%</span>
+                    <h5>Core JAVA</h5><span>80%</span>
                     <div class="progress" data-percent="80%">
                         <div class="progress-bar bar-null" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
+                    </div>
+                </div>
+		<div class="skill-item">
+                    <h5>JAVA Servlet Pages</h5><span>50%</span>
+                    <div class="progress" data-percent="50%">
+                        <div class="progress-bar bar-null" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;"></div>
+                    </div>
+                </div>
+		<div class="skill-item">
+                    <h5>JAVA AWT</h5><span>60%</span>
+                    <div class="progress" data-percent="60%">
+                        <div class="progress-bar bar-null" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div>
                     </div>
                 </div>
                 <div class="skill-item">
