--- a/index.html
+++ b/index.html
@@ -332,9 +332,9 @@
 		                           		<h2>01</h2>
 		                        	</div>
 		                        	<div class="text">
-		                           		<h3>DEVELOPER STUDENT CLUBS, BANASTHALI VIDYAPITH</h3>
+		                           		<h3>GOOGLE DEVELOPER STUDENT CLUBS, BANASTHALI VIDYAPITH</h3>
 		                           		<h4>TEAM MEMBER</h4>
-		                           		<p>Developer Student Clubs is a platform for all those young enthusiasts to come together and discuss, invent and invest in their ideas with each other.</p>
+		                           		<p>GDSC is a platform for all those young enthusiasts to come together and discuss, invent and invest in their ideas with each other.</p>
 		                        	</div>
 		                     	</div>
 		                  	</div>
