--- a/index.html
+++ b/index.html
@@ -103,8 +103,7 @@
 	                                 <h3>I am a
 	                                    <span id="typed-slide-1"></span>
 	                                    <span id="typed-strings-slide-1">
-	                                    <span>Student.</span>
-	                                    <span>Web Developer.</span>
+	                                    <span>Developer.</span>
 	                                    <span>Coder.</span>
 	                                    </span>
 	                                 </h3>
@@ -127,8 +126,8 @@
 		      				<div class="cont">
 		        				<h3><center>BANASTHALI VIDYAPITH</center></h3>
 		        				<h5><center>B. Tech. in Computer Science</center></h5>
-		        				<p><center>CGPA: 7.51/10</center></p>
-		        				<time>2018-Present</time>
+		        				<p><center>CGPA: 7.3/10</center></p>
+		        				<time>2018-2022</time>
 		      				</div>
 		    			</li>
 		    			<li>
@@ -158,25 +157,25 @@
         	<h2 class="headings"><center>TECH STACK</center></h2>
         	<div class="skills">
         		<div class="skill-item">
-					<h5>C</h5><span>70%</span>
+					<h5>Java</h5><span>70%</span>
                     <div class="progress" data-percent="70%">
                         <div class="progress-bar bar-null" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div>
                     </div>
                 </div>
                 <div class="skill-item">
-                    <h5>Core JAVA</h5><span>80%</span>
+                    <h5>Spring Boot</h5><span>80%</span>
                     <div class="progress" data-percent="80%">
                         <div class="progress-bar bar-null" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
                     </div>
                 </div>
 		<div class="skill-item">
-                    <h5>JAVA Servlet Pages</h5><span>50%</span>
+                    <h5>Spring Security</h5><span>50%</span>
                     <div class="progress" data-percent="50%">
                         <div class="progress-bar bar-null" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;"></div>
                     </div>
                 </div>
 		<div class="skill-item">
-                    <h5>JAVA AWT</h5><span>60%</span>
+                    <h5>Java Servlet Pages</h5><span>60%</span>
                     <div class="progress" data-percent="60%">
                         <div class="progress-bar bar-null" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div>
                     </div>
@@ -199,6 +198,12 @@
                         <div class="progress-bar bar-null" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%;"></div>
                     </div>
                 </div>
+		<div class="skill-item">
+                    <h5>React JS</h5><span>85%</span>
+                    <div class="progress" data-percent="60%">
+                        <div class="progress-bar bar-null" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%;"></div>
+                    </div>
+                </div>
                 <div class="skill-item">
                     <h5>BOOTSTRAP</h5><span>60%</span>
                     <div class="progress" data-percent="60%">
@@ -214,7 +219,7 @@
          	<section id="services">
             <div class="container">
                <div class="row">
-                  <div class="col-md-12">
+		  <div class="col-md-6">
                      <div class="service">
                         <div class="icon">
                            <i class="fas fa-paper-plane"></i>
@@ -223,8 +228,29 @@
                            <h2>01</h2>
                         </div>
                         <div class="text">
+                           <h3>Back-end Developer</h3>
+                           <h4>Tata Consultancy Services | JUL 2022 - Present</h4>
+                           <p>
+                           		<ul>
+                           			<li>Designing and developing RESTful web services for Money Transfer API, Account Balance API, setNickName API, etc.</li>
+                           			<li>Writing, testing, and debugging Java code for web applications.</li>
+                           			<li>Implementing OOP and SOLID principles for scalable and maintainable code.</li>
+                           		</ul> 
+                            </p>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="col-md-6">
+                     <div class="service">
+                        <div class="icon">
+                           <i class="fas fa-paper-plane"></i>
+                        </div>
+                        <div class="box-num">
+                           <h2>02</h2>
+                        </div>
+                        <div class="text">
                            <h3>Back-end Intern</h3>
-                           <h4>Agriculture Insurance Company of India Limited | JUN 2021 - Present</h4>
+                           <h4>Agriculture Insurance Company of India Limited | JUN 2021 - DEC 2021</h4>
                            <p>
                            		<ul>
                            			<li>Worked on a module of Online Quiz for handling the responses through queue and hashmap. Made connections with database.</li>
