--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@
                     </div>
                 </div>
                 <div class="skill-item">
-                    <h5>Spring Boot</h5><span>80%</span>
-                    <div class="progress" data-percent="80%">
-                        <div class="progress-bar bar-null" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
+                    <h5>Spring Boot</h5><span>70%</span>
+                    <div class="progress" data-percent="70%">
+                        <div class="progress-bar bar-null" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div>
                     </div>
                 </div>
 		<div class="skill-item">
@@ -228,7 +228,7 @@
                            <h2>01</h2>
                         </div>
                         <div class="text">
-                           <h3>Back-end Developer</h3>
+                           <h3>Backend Developer</h3>
                            <h4>Tata Consultancy Services | JUL 2022 - Present</h4>
                            <p>
                            		<ul>
@@ -250,7 +250,7 @@
                         </div>
                         <div class="text">
                            <h3>Back-end Intern</h3>
-                           <h4>Agriculture Insurance Company of India Limited | JUN 2021 - DEC 2021</h4>
+                           <h4>Agriculture Insurance Company | JUN 2021 - DEC 2021</h4>
                            <p>
                            		<ul>
                            			<li>Worked on a module of Online Quiz for handling the responses through queue and hashmap. Made connections with database.</li>
@@ -271,7 +271,7 @@
                         </div>
                         <div class="text">
                            <h3>Intern</h3>
-                           <h4>Edapt | JULY 2021 - Present | Part-time</h4>
+                           <h4>Edapt | JULY 2021 - JULY 2021 | Part-time</h4>
                            <p>
                            		<ul>
                            			<li>Designed and created a course module on JAVA core concepts. This included in the preparation of videos and scripts.</li>
