--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                         </div>
                         <div class="text">
                            <h3>Backend Developer</h3>
-                           <h4>Tata Consultancy Services | JUL 2022 - Present</h4>
+                           <h4>Tata Consultancy Services Limited | JUL 2022 - Present</h4>
                            <p>
                            		<ul>
                            			<li>Designing and developing RESTful web services for Money Transfer API, Account Balance API, setNickName API, etc.</li>
@@ -250,7 +250,7 @@
                         </div>
                         <div class="text">
                            <h3>Back-end Intern</h3>
-                           <h4>Agriculture Insurance Company | JUN 2021 - DEC 2021</h4>
+                           <h4>Agriculture Insurance Company of India Limited | JUN 2021 - DEC 2021</h4>
                            <p>
                            		<ul>
                            			<li>Worked on a module of Online Quiz for handling the responses through queue and hashmap. Made connections with database.</li>
