--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                            <h4>Tata Consultancy Services Limited | JUL 2022 - Present</h4>
                            <p>
                            		<ul>
-                           			<li>Designing and developing RESTful web services for Money Transfer API, Account Balance API, setNickName API, etc.</li>
+                           			<li>Designing and developing RESTful web services for Money Transfer API, Account Balance API, etc.</li>
                            			<li>Writing, testing, and debugging Java code for web applications.</li>
                            			<li>Implementing OOP and SOLID principles for scalable and maintainable code.</li>
                            		</ul> 
@@ -253,7 +253,7 @@
                            <h4>Agriculture Insurance Company of India Limited | JUN 2021 - DEC 2021</h4>
                            <p>
                            		<ul>
-                           			<li>Worked on a module of Online Quiz for handling the responses through queue and hashmap. Made connections with database.</li>
+                           			<li>Worked on a module of Online Quiz for handling the responses through queue and hashmap.</li>
                            			<li>Made services for state, district and sub-district using JSON.</li>
                            			<li>Working on Document Management System to store images and files properly on the server.</li>
                            		</ul> 
