--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                            		<ul>
                            			<li>Worked on a module of Online Quiz for handling the responses through queue and hashmap.</li>
                            			<li>Made services for state, district and sub-district using JSON.</li>
-                           			<li>Working on Document Management System to store images and files properly on the server.</li>
+                           			<li>Worked on Document Management System on WorkFlow Management System Project.</li>
                            		</ul> 
                             </p>
                         </div>
