--- a/index.html
+++ b/index.html
@@ -233,7 +233,8 @@
                            <p>
                            		<ul>
                            			<li>Designing and developing RESTful web services for Money Transfer API, Account Balance API, etc.</li>
-                           			<li>Writing, testing, and debugging Java code for web applications.</li>
+						<li>Spearheading a team of two for developing enterprise-level web applications using Java.</li>
+                           			<li>Conducting code reviews to deliver high quality software.</li>
                            			<li>Implementing OOP and SOLID principles for scalable and maintainable code.</li>
                            		</ul> 
                             </p>
@@ -254,7 +255,7 @@
                            <p>
                            		<ul>
                            			<li>Worked on a module of Online Quiz for handling the responses through queue and hashmap.</li>
-                           			<li>Made services for state, district and sub-district using JSON.</li>
+                           			<li>Made services for state, district, and sub-district using JSON and JAVA for the WeatherAPI project.</li>
                            			<li>Worked on Document Management System on WorkFlow Management System Project.</li>
                            		</ul> 
                             </p>
