--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                            <h4>Tata Consultancy Services Limited | JUL 2022 - Present</h4>
                            <p>
                            		<ul>
-                           			<li>Designing and developing RESTful web services for Money Transfer API, etc.</li>
+                           			<li>Designing and developing RESTful web services for Money Transfer API, Account Balance API, etc.</li>
 						<li>Spearheading a team of two for developing web applications using Java.</li>
                            			<li>Conducting code reviews to deliver high quality software.</li>
                            			<li>Implementing OOP and SOLID principles for scalable and maintainable code.</li>
